--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Note project server",
-  "main": "server.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "tsc && node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@types/node-fetch": "^3.0.3",
+    "typescript": "^4.4.4"
   }
 }
